--- a/vueJS/package.json
+++ b/vueJS/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "moment": "^2.19.1",
     "vue": "^2.4.2",
     "vue-axios": "^2.0.2",
     "vue-router": "^2.7.0"
